--- a/longevity.qmd
+++ b/longevity.qmd
@@ -90,19 +90,19 @@ This study uses a well known database of `r nrow(ml_df)` men recruited in 1963 a
 
 ## Whats inside?
 
-This data frame contains `r ncol(ml_df)` variables:
+This data frame contains `r ncol(ml_df)-1` variables:
 
-1.  Demographics data (`r sum(str_detect(colnames(ml_df),"dmg"))`)
+1.  Demographics data (`r sum(str_starts(colnames(ml_df),"dmg"))`)
 
-2.  Medical data including medical history, laboratory tests and measurements (`r sum(str_detect(colnames(ml_df),"med"))`)
+2.  Medical data including medical history, laboratory tests and measurements (`r sum(str_starts(colnames(ml_df),"med"))+sum(str_starts(colnames(ml_df),"lab"))+sum(str_starts(colnames(ml_df),"comp"))`)
 
-3.  physical (`r sum(str_detect(colnames(ml_df),"physical"))`)
+3.  Daily physical activity assessment (`r sum(str_starts(colnames(ml_df),"physical"))`)
 
-4.  work (`r sum(str_detect(colnames(ml_df),"work"))`)
+4.  Work related data (e.g. satisfaction, income etc.) (`r sum(str_starts(colnames(ml_df),"work"))`)
 
-5.  family (`r sum(str_detect(colnames(ml_df),"family"))`)
+5.  Family relations (`r sum(str_starts(colnames(ml_df),"family"))`)
 
-6.  diet (`r sum(str_detect(colnames(ml_df),"diet"))`)
+6.  Diet habits (`r sum(str_starts(colnames(ml_df),"diet"))`)
 
 7.  Outcome - reaching to the age of 95, prevalence of `r round(100*sum(ml_df$outcome == "centenarian")/nrow(ml_df),2)` %
 
@@ -112,7 +112,7 @@ This data frame contains `r ncol(ml_df)` variables:
 
 2.  create specifications for the different models
 
-3.  hypertune parameters
+3.  hyper-tune parameters
 
 4.  examine results
 
